# friday-teaming-7

./: README.md  pyproject.toml  rover.py  test_rover.py
